Transform to Barclayne - Financial Markets Intelligence Platform
- Complete transformation from crypto-focused to comprehensive finance platform
- Added finance APIs for stocks, indices, commodities, forex, and crypto
- Updated all UI components for multi-asset support
- Enhanced charts page with asset type filtering
- Created Barclayne branding with golden infinity logo
- Updated meta data and SEO for Barclayne platform
- Integrated smart caching and finance data management
- Added comprehensive category system for financial markets

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "coin-feedly",
+  "name": "barclayne",
   "version": "1.0.0",
-  "description": "Crypto News RSS Feed for Traders",
+  "description": "Barclayne - Financial Markets Intelligence Platform",
   "private": true,
   "scripts": {
     "dev": "next dev",
